PP-8125 Worldpay notifications - query gateway_account_credentials for merchant_id
- Queries `gateway_account_credentials` for matching merchant_id for worldpay notifications and uses flag `allow_telephone_payment_notifications` on gateway account to determine whether the gateway account is configured to accept telephone payment notifications.